--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "handlebars": "^4.7.7",
     "notiflix": "^3.2.2",
     "simplelightbox": "^2.10.1",
     "src": "^1.1.2"
